# usdmat

./: LICENSE  README.md  usdmat.h
demo/: CMakeLists.txt  main.cpp
